@@ -8,6 +8,7 @@ cm4all-beng-proxy (0.3.1) unstable; urgency=low
   * cgi: abort the response handler when the stdin stream fails
   * istream_file, istream_pipe, fork, client_socket, listener: fixed file
     descriptor leaks
+  * processor: hold a reference to the caller's pool
 
  --
 
